[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Tools/Pickaxe_UI.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tools/Shovel_UI.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tools/Axe_UI.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tools/Scythe_UI.png" type="Texture" id=4]
[ext_resource path="res://Assets/Tools/ToolBackground_UI.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tools/SelectedOverlay_UI.png" type="Texture" id=6]
[ext_resource path="res://Scripts/UI/PlayerUI.gd" type="Script" id=7]
[ext_resource path="res://Scripts/UI/ToolUI.gd" type="Script" id=8]
[ext_resource path="res://Assets/Tools/Arrow_UI.png" type="Texture" id=9]
[ext_resource path="res://Scenes/UI/InventoryUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/UI/LoreBookUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/UI/CraftingBookUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Battle/BattleScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://Animations/OverworldBattleIn.tres" type="Animation" id=14]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BattleScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 600, 0 ) ]
}

[node name="PlayerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolUI" type="Control" parent="."]
margin_left = 14.0
margin_top = 211.0
margin_right = 54.0
margin_bottom = 251.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_UI" type="TextureRect" parent="ToolUI"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolImageUI" type="HBoxContainer" parent="ToolUI"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1, 0.996163 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftColumn" type="VBoxContainer" parent="ToolUI/ToolImageUI"]
margin_right = 20.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="Slot1" type="TextureRect" parent="ToolUI/ToolImageUI/LeftColumn"]
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Slot4" type="TextureRect" parent="ToolUI/ToolImageUI/LeftColumn"]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightColum" type="VBoxContainer" parent="ToolUI/ToolImageUI"]
margin_left = 20.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Slot2" type="TextureRect" parent="ToolUI/ToolImageUI/RightColum"]
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Slot3" type="TextureRect" parent="ToolUI/ToolImageUI/RightColum"]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="SelectionUI" type="HBoxContainer" parent="ToolUI"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.978465, 0.994377 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftColumn" type="VBoxContainer" parent="ToolUI/SelectionUI"]
margin_right = 20.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="Slot1" type="TextureRect" parent="ToolUI/SelectionUI/LeftColumn"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Slot4" type="TextureRect" parent="ToolUI/SelectionUI/LeftColumn"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 20.0
margin_right = 20.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="RightColum" type="VBoxContainer" parent="ToolUI/SelectionUI"]
margin_left = 20.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Slot2" type="TextureRect" parent="ToolUI/SelectionUI/RightColum"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Slot3" type="TextureRect" parent="ToolUI/SelectionUI/RightColum"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 20.0
margin_right = 20.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="ArrowSelection" type="TextureRect" parent="ToolUI"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 20, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUpAlertUI" type="Control" parent="."]
margin_left = 297.0
margin_top = 165.0
margin_right = 480.0
margin_bottom = 269.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUpContainer" type="VBoxContainer" parent="PopUpAlertUI"]
anchor_right = 0.85
anchor_bottom = 0.852
rect_pivot_offset = Vector2( -221, -80 )
custom_constants/separation = 6
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryUI" parent="." instance=ExtResource( 10 )]
grow_horizontal = 0
grow_vertical = 0

[node name="LoreBookUI" parent="." instance=ExtResource( 11 )]
visible = false

[node name="CraftingBookUI" parent="." instance=ExtResource( 12 )]
visible = false

[node name="BattleScreen" parent="." instance=ExtResource( 13 )]
margin_left = 600.0
margin_right = 12600.0
margin_bottom = 6750.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/OverworldBattleIn = ExtResource( 14 )
anims/RESET = SubResource( 1 )

[connection signal="nextTool" from="." to="ToolUI" method="_on_PlayerUI_nextTool"]
[connection signal="previousTool" from="." to="ToolUI" method="_on_PlayerUI_previousTool"]
[connection signal="sub_menu" from="InventoryUI" to="." method="_on_InventoryUI_sub_menu"]
